# SdfLib

./: .gitignore  CMakeConfig.txt  CMakeLists.txt  LICENSE  README.md  SdfLibConfig.cmake.in
include/SdfLib/: ExactOctreeSdf.h  ExactOctreeSdfDepthFirst.h  IOctreeSdf.h  InterpolationMethods.h  OctreeSdf.h  OctreeSdfBreadthFirst.h  OctreeSdfBreadthFirstNoDelay.h  OctreeSdfDepthFirst.h  OctreeSdfUtils.h  SdfFunction.h  TestSdfFunction.h  TrianglesInfluence.h
include/SdfLib/utils/: Mesh.h  TriangleUtils.h
libs/: CMakeLists.txt
libs/InteractiveComputerGraphics/InteractiveComputerGraphics/: TriangleMeshDistance.h
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/old_glad/src/: glad.c
src/render_engine/: Camera.cpp  Camera.h  MainLoop.cpp  MainLoop.h  NavigationCamera.cpp  NavigationCamera.h  RenderMesh.cpp  RenderMesh.h  RenderSdf.cpp  RenderSdf.h  Scene.cpp  Scene.h  System.h  Window.cpp  Window.h  WindowVulkan.cpp  WindowVulkan.h
src/render_engine/shaders/: BasicShader.h  ColorsShader.h  GridShader.h  IShader.cpp  IShader.h  NormalsShader.h  NormalsSplitPlaneShader.h  ScreenPlaneShader.h  SdfOctreeLightShader.h  SdfOctreeMeanTrianglesPlaneShader.h  SdfOctreePlaneShader.h  SdfPlaneShader.h  Shader.h  basic.frag  basic.vert  colors.frag  colors.vert  grid.frag  grid.vert  normals.frag  normals.vert  normalsSplitPlane.frag  normalsSplitPlane.vert  screenPlane.frag  screenPlane.vert  sdfOctreeLight.frag  sdfOctreeLight.vert  sdfOctreeMeanTrianglesPlane.frag  sdfOctreeMeanTrianglesPlane.vert  sdfOctreePlane.frag  sdfOctreePlane.vert  sdfOctreeRender.comp  sdfOctreeRenderIter.comp  sdfPlane.frag  sdfPlane.vert
src/sdf/: ExactOctreeSdf.cpp  ExactOctreeSdf.h  ExactOctreeSdfDepthFirst.h  InterpolationMethods.h  OctreeSdf.cpp  OctreeSdf.h  OctreeSdfBreadthFirst.cpp  OctreeSdfBreadthFirst.h  OctreeSdfBreadthFirstNoDelay.cpp  OctreeSdfBreadthFirstNoDelay.h  OctreeSdfComputeShader.cpp  OctreeSdfDepthFirst.cpp  OctreeSdfDepthFirst.h  OctreeSdfUniform.cpp  OctreeSdfUtils.h  OldTrianglesInfluence.h  RealSdf.cpp  RealSdf.h  SdfFunction.cpp  SdfFunction.h  TrianglesInfluence.h  UniformGridSdf.cpp  UniformGridSdf.h  UniformGridSdfOctree.cpp  octreeSdf.comp  octreeSdfEnd.comp
src/tools/CalculateInterpolationParameters/: main.cpp
src/tools/GJKtest/: main.cpp
src/tools/ImageQueryTime/: main.cpp
src/tools/OctreeExactMeanOfTrianglesViewer/: main.cpp
src/tools/ParticleSimulation/: main.cpp
src/tools/SdfError/: main.cpp
src/tools/SdfErrorCompare/: main.cpp
src/tools/SdfExporter/: main.cpp
src/tools/SdfLib/: SdfExportFunc.cpp  SdfExportFunc.h
src/tools/SdfLibUnity/: SdfExportFunc.cpp  SdfExportFunc.h
src/tools/SdfLight/: main.cpp
src/tools/SdfOctreeTest/: main.cpp
src/tools/SdfOffsets/: main.cpp
src/tools/SdfRender/: main.cpp
src/tools/SdfViewer/: InfluenceRegionCreator.h  main.cpp
src/tools/TestScene/: main.cpp
src/tools/TriangleDistanceTest/: main.cpp
src/tools/UniformGridSdfOctreeTest/: main.cpp
src/tools/UniformGridSdfTest/: main.cpp
src/tools/UniformGridViewer/: main.cpp
src/utils/: GJK.cpp  GJK.h  Mesh.cpp  Mesh.h  PrimitivesFactory.cpp  PrimitivesFactory.h  Timer.cpp  Timer.h  TriangleUtils.cpp  TriangleUtils.h  UsefullSerializations.h
